--- a/Setup/Builder.ipynb
+++ b/Setup/Builder.ipynb
@@ -20,7 +20,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e4770998",
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "#r \"nuget: Newtonsoft.Json\"\n",
@@ -45,13 +49,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "64aceeec",
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "var cstring = \"AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==\";\n",
-    "client = new CosmosClient(cstring, new CosmosClientOptions() {AllowBulkExecution = true});\n",
+    "var client = new CosmosClient(cstring, new CosmosClientOptions() {AllowBulkExecution = true});\n",
     "var newdb = await client.CreateDatabaseIfNotExistsAsync(\"StackOverflow\");\n",
     "ContainerProperties props = new ContainerProperties(\"Posts0\", \"/OwnerUserId\");\n",
+    "var db = client.GetDatabase(\"StackOverflow\");\n",
     "var postContainer = await db.CreateContainerIfNotExistsAsync(props, throughput: 4000);\n"
    ]
   },
@@ -67,7 +76,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1bbd4e7e",
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Post    \n",
@@ -96,7 +109,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "23de9e01",
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "using Newtonsoft.Json.Linq;\n",
@@ -106,7 +123,7 @@
     "var postList = JsonConvert.DeserializeObject<List<Post>>(json);\n",
     "postList.Count.Display(); // Display the number of posts\n",
     "//write the post to the container in bulk mode\n",
-    "var postContainer = db.GetContainer(\"Posts\");\n",
+    "var postContainer = db.GetContainer(\"Posts0\");\n",
     "foreach (var post in postList)\n",
     "{        \n",
     "    var response = await postContainer.CreateItemAsync(post, new PartitionKey(post.OwnerUserId));\n",
