--- a/Study/3. Indexing.ipynb
+++ b/Study/3. Indexing.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "When you define a new container, all properties of the data model would be indexed by default.\n",
     "It is your responsibility to exclude the properties that you don't need an index.\n",
-    "You can disable indexing on a container by passing None to the Indexing Mode."
+    "You can disable indexing on a container by passing None to the Indexing Mode.\n",
+    "If you keep all properties indexed, your index file might got larger than your data file."
    ]
   },
   {
@@ -108,45 +109,6 @@
     "ContainerResponse containerResponse = await db.GetContainer(\"Posts\").ReadContainerAsync(new ContainerRequestOptions { PopulateQuotaInfo = true });\n",
     "// retrieve the index transformation progress from the result\n",
     "long indexTransformationProgress = long.Parse(containerResponse.Headers[\"x-ms-documentdb-collection-index-transformation-progress\"]);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "(4,60): error CS0246: The type or namespace name 'Item' could not be found (are you missing a using directive or an assembly reference?)\r\n(4,39): error CS1061: 'ContainerResponse' does not contain a definition for 'GetItemQueryIterator' and no accessible extension method 'GetItemQueryIterator' accepting a first argument of type 'ContainerResponse' could be found (are you missing a using directive or an assembly reference?)\r\n(10,18): error CS0246: The type or namespace name 'Item' could not be found (are you missing a using directive or an assembly reference?)",
-     "output_type": "error",
-     "traceback": [
-      "(4,60): error CS0246: The type or namespace name 'Item' could not be found (are you missing a using directive or an assembly reference?)\r\n",
-      "(4,39): error CS1061: 'ContainerResponse' does not contain a definition for 'GetItemQueryIterator' and no accessible extension method 'GetItemQueryIterator' accepting a first argument of type 'ContainerResponse' could be found (are you missing a using directive or an assembly reference?)\r\n",
-      "(10,18): error CS0246: The type or namespace name 'Item' could not be found (are you missing a using directive or an assembly reference?)"
-     ]
-    }
-   ],
-   "source": [
-    "string sqlQueryText = \"SELECT TOP 10 c.id FROM c WHERE c.Item = 'value1234' AND c.Price > 2\";\n",
-    "\n",
-    "QueryDefinition query = new QueryDefinition(sqlQueryText);\n",
-    "var resultSetIterator = postContainer.GetItemQueryIterator<Item>(\n",
-    "                query, requestOptions: new QueryRequestOptions\n",
-    "        {\n",
-    "            PopulateIndexMetrics = true\n",
-    "        });\n",
-    "\n",
-    "    FeedResponse<Item> response = null;\n",
-    "\n",
-    "    while (resultSetIterator.HasMoreResults)\n",
-    "        {\n",
-    "          response = await resultSetIterator.ReadNextAsync();\n",
-    "          Console.WriteLine(response.IndexMetrics);\n",
-    "        }"
    ]
   },
   {
