--- a/Study/5. Computed Properties.ipynb
+++ b/Study/5. Computed Properties.ipynb
@@ -56,6 +56,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "16f962e8",
+   "metadata": {},
+   "source": [
+    "Following code creates a new computed property for counting the number of days of unanswered questions.\n",
+    "Then it creates an index on it. You need to create an in on computed properties to see efficiency changes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
@@ -115,7 +124,9 @@
    "id": "19a05e56",
    "metadata": {},
    "source": [
-    "Following query uses the system function"
+    "Now, we are ready to see the efficiency changes.\n",
+    "Following query uses a system function which calculates the days without computed properties.\n",
+    "Pay attention to the Request Unit Charge."
    ]
   },
   {
@@ -188,7 +199,9 @@
    "id": "a89dea56",
    "metadata": {},
    "source": [
-    "Following query uses the new computed property"
+    "Following query uses the new computed property. \n",
+    "Query is not complex and easier to read.\n",
+    "Also, It should cost less to run this query."
    ]
   },
   {
