--- a/Study/6. Indexing Metrics.ipynb
+++ b/Study/6. Indexing Metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "9bbca87f",
    "metadata": {
     "polyglot_notebook": {
@@ -24,12 +24,13 @@
     "#r \"nuget: Newtonsoft.Json\"\n",
     "#r \"nuget: Microsoft.Azure.Cosmos\"\n",
     "using Microsoft.Azure.Cosmos;\n",
-    "using System.Collections.ObjectModel;"
+    "using System.Collections.ObjectModel;\n",
+    "using Newtonsoft.Json;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -76,8 +77,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8891cb91",
+   "metadata": {},
+   "source": [
+    "You need to enable the Indexing Metrics by using the QueryRequestOptions.\n",
+    "It is a great parameter to debug performance problems.\n",
+    "Don't keep it enabled in prod if you are not having issues.\n",
+    "It returns a JSON document which is not really easy to read."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "id": "74e11acb",
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -85,16 +98,121 @@
    },
    "outputs": [],
    "source": [
+    "public class SingleIndex{\n",
+    "    public string IndexSpec { get; set; }    \n",
+    "}\n",
+    "\n",
+    "public class CompositeIndexes{\n",
+    "    public string IndexSpec { get; set; }\n",
+    "}\n",
+    "\n",
+    "public class UtilizedIndexes{    \n",
+    "    public List<SingleIndex> SingleIndexes { get; set; }\n",
+    "    public List<CompositeIndexes> CompositeIndexes { get; set; }\n",
+    "}\n",
+    "\n",
+    "public class PotentialIndexes{    \n",
+    "    public List<SingleIndex> SingleIndexes { get; set; }\n",
+    "    public List<CompositeIndexes> CompositeIndexes { get; set; }\n",
+    "}\n",
+    "\n",
+    "public class IndexMetrics{\n",
+    "    public UtilizedIndexes UtilizedIndexes { get; set; }\n",
+    "    public PotentialIndexes PotentialIndexes { get; set; }\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>3.01</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/json": {
+       "PotentialIndexes": {
+        "CompositeIndexes": [],
+        "SingleIndexes": []
+       },
+       "UtilizedIndexes": {
+        "CompositeIndexes": [],
+        "SingleIndexes": [
+         {
+          "IndexSpec": "/PostType/?"
+         },
+         {
+          "IndexSpec": "/OwnerUserId/?"
+         }
+        ]
+       }
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "var cmd = \"SELECT c.PostId FROM c WHERE c.OwnerUserId = 1 AND c.PostType= 'Question'\";\n",
     "var postQuery = new QueryDefinition(cmd);\n",
-    "var iterator = postContainer.GetItemQueryIterator<Post>(postQuery);\n",
+    "var iterator = postContainer.GetItemQueryIterator<Post>(postQuery, requestOptions: new QueryRequestOptions\n",
+    "        {\n",
+    "            PopulateIndexMetrics = true\n",
+    "        });\n",
     "var results = new List<Post>();\n",
     "\n",
     "while (iterator.HasMoreResults)\n",
     "{\n",
     "    var response = await iterator.ReadNextAsync();    \n",
     "    results.AddRange(response);\n",
-    "    response.RequestCharge.Display(); // Display the request charge of the response\n",
+    "    response.RequestCharge.Display();\n",
+    "    var iMetrics = JsonConvert.DeserializeObject<IndexMetrics>(response.IndexMetrics);\n",
+    "    iMetrics.Display(\"application/json\");\n",
+    "    //response.IndexMetrics.Display();\n",
     "}"
    ]
   }
