--- a/Study/7. Caching.ipynb
+++ b/Study/7. Caching.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "31046914",
+   "metadata": {},
+   "source": [
+    "Azure Cosmos DB cache is available only if you have dedicated Gateway Server.\n",
+    "There are different size of servers,\n",
+    "You need to use the dedicated gateway server's connection string and override your connection type to Gateway mode.\n",
+    "Integrated Cache can cache query and point read results.\n",
+    "You can define the expiration time of each item by code.\n",
+    "Integrated Cache is a great way to save R/U(money) for Read-heavy workloads (Your data doesn't change frequently)\n",
+    "ConsistencyLevel of the operation must be Session or Eventual for caching to work."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f431d56e",
@@ -46,6 +60,15 @@
     "    public int Score { get; set; }\n",
     "    public string Tags { get; set; }\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21b04328",
+   "metadata": {},
+   "source": [
+    "You need to run this in Azure. Local Emulator does not support the caching feature.\n",
+    "Paste the connection string of your dedicated gateway server to the following script to execute it."
    ]
   },
   {
