--- a/Query.ipynb
+++ b/Query.ipynb
@@ -44,7 +44,8 @@
     "client = new CosmosClient(cstring, new CosmosClientOptions() {AllowBulkExecution = true});\n",
     "var db = client.GetDatabase(\"StackOverflow\");\n",
     "ContainerProperties props = new ContainerProperties(\"Posts3\", \"/OwnerUserId\");\n",
-    "var postContainer = await db.CreateContainerIfNotExistsAsync(props, throughput: 4000);\n"
+    "var postContainer = await db.CreateContainerIfNotExistsAsync(props, throughput: 4000);\n",
+    "\n"
    ]
   },
   {
