--- a/Vectors.ipynb
+++ b/Vectors.ipynb
@@ -222,7 +222,7 @@
    "id": "2cb0d698",
    "metadata": {},
    "source": [
-    "Make a vector search"
+    "Run a vector search"
    ]
   },
   {
