--- a/Labs/Lab1.ipynb
+++ b/Labs/Lab1.ipynb
@@ -1,27 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.48.1</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#r \"nuget: Newtonsoft.Json\"\n",
-    "#r \"nuget: Microsoft.Azure.Cosmos\"\n"
+    "You need to use Microsoft.Azure.Cosmos package to connect and work with Azure Cosmos DB.\n",
+    "You can reference any nuget packages by using the following format.\n",
+    "\n",
+    "#r \"nuget: Microsoft.Azure.Cosmos\"\n",
+    "\n",
+    "You may need to reference Newtonsoft.Json package manually if you receive any error from the Microsoft.Azure.Cosmos package.\n",
+    "\n",
+    "You need to reference Newtonsoft.Json first if you receive an error.\n",
+    "#r \"nuget: Newtonsoft.Json\""
    ]
   },
   {
@@ -32,19 +23,28 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.51.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "using Microsoft.Azure.Cosmos;\n",
-    "using System.Net.Http;"
+    "#r \"nuget: Newtonsoft.Json\"\n",
+    "#r \"nuget: Microsoft.Azure.Cosmos\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, declare CosmosClient using connection strings.\n",
-    "CosmosClientOptions is optional and it has many options to use.\n",
-    "Use Display() function to explore its options under ClientOptions property."
+    "After successful installation, reference the Microsoft.Azure.Cosmos\n",
+    "using Microsoft.Azure.Cosmos;"
    ]
   },
   {
@@ -55,61 +55,38 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<details open=\"open\" class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Microsoft.Azure.Cosmos.CosmosClient</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>ClientOptions</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Microsoft.Azure.Cosmos.CosmosClientOptions</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>ApplicationName</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>ApplicationRegion</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>ApplicationPreferredRegions</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>AccountInitializationCustomEndpoints</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>GatewayModeMaxConnectionLimit</td><td><div class=\"dni-plaintext\"><pre>50</pre></div></td></tr><tr><td>RequestTimeout</td><td><span>00:00:06</span></td></tr><tr><td>TokenCredentialBackgroundRefreshInterval</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>CustomHandlers</td><td><i>(empty)</i></td></tr><tr><td>ConnectionMode</td><td><span>Direct</span></td></tr><tr><td>ConsistencyLevel</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>PriorityLevel</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>MaxRetryAttemptsOnRateLimitedRequests</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>MaxRetryWaitTimeOnRateLimitedRequests</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>EnableContentResponseOnWrite</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>UseSystemTextJsonSerializerWithOptions</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>IdleTcpConnectionTimeout</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>OpenTcpConnectionTimeout</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>MaxRequestsPerTcpConnection</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>MaxTcpConnectionsPerEndpoint</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>PortReuseMode</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>WebProxy</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>SerializerOptions</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>Serializer</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Microsoft.Azure.Cosmos.CosmosJsonSerializerWrapper</code></span></summary><div><table><thead><tr></tr></thead><tbody></tbody></table></div></details></td></tr><tr><td>LimitToEndpoint</td><td><div class=\"dni-plaintext\"><pre>False</pre></div></td></tr><tr><td>AllowBulkExecution</td><td><div class=\"dni-plaintext\"><pre>False</pre></div></td></tr><tr><td>EnableTcpConnectionEndpointRediscovery</td><td><div class=\"dni-plaintext\"><pre>True</pre></div></td></tr><tr><td>HttpClientFactory</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>AvailabilityStrategy</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>ServerCertificateCustomValidationCallback</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>CosmosClientTelemetryOptions</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Microsoft.Azure.Cosmos.CosmosClientTelemetryOptions</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>DisableSendingMetricsToService</td><td><div class=\"dni-plaintext\"><pre>True</pre></div></td></tr><tr><td>DisableDistributedTracing</td><td><div class=\"dni-plaintext\"><pre>True</pre></div></td></tr><tr><td>CosmosThresholdOptions</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Microsoft.Azure.Cosmos.CosmosThresholdOptions</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>NonPointOperationLatencyThreshold</td><td><span>00:00:03</span></td></tr><tr><td>PointOperationLatencyThreshold</td><td><span>00:00:01</span></td></tr><tr><td>RequestChargeThreshold</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>PayloadSizeThresholdInBytes</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr></tbody></table></div></details></td></tr><tr><td>QueryTextMode</td><td><span>None</span></td></tr></tbody></table></div></details></td></tr><tr><td>FaultInjector</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr></tbody></table></div></details></td></tr><tr><td>ResponseFactory</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Microsoft.Azure.Cosmos.CosmosResponseFactoryCore</code></span></summary><div><table><thead><tr></tr></thead><tbody></tbody></table></div></details></td></tr><tr><td>Endpoint</td><td><details class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>https://localhost:8081/</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>AbsolutePath</td><td><div class=\"dni-plaintext\"><pre>/</pre></div></td></tr><tr><td>AbsoluteUri</td><td><div class=\"dni-plaintext\"><pre>https://localhost:8081/</pre></div></td></tr><tr><td>LocalPath</td><td><div class=\"dni-plaintext\"><pre>/</pre></div></td></tr><tr><td>Authority</td><td><div class=\"dni-plaintext\"><pre>localhost:8081</pre></div></td></tr><tr><td>HostNameType</td><td><span>Dns</span></td></tr><tr><td>IsDefaultPort</td><td><div class=\"dni-plaintext\"><pre>False</pre></div></td></tr><tr><td>IsFile</td><td><div class=\"dni-plaintext\"><pre>False</pre></div></td></tr><tr><td>IsLoopback</td><td><div class=\"dni-plaintext\"><pre>True</pre></div></td></tr><tr><td>PathAndQuery</td><td><div class=\"dni-plaintext\"><pre>/</pre></div></td></tr><tr><td>Segments</td><td><div class=\"dni-plaintext\"><pre>[ / ]</pre></div></td></tr><tr><td>IsUnc</td><td><div class=\"dni-plaintext\"><pre>False</pre></div></td></tr><tr><td>Host</td><td><div class=\"dni-plaintext\"><pre>localhost</pre></div></td></tr><tr><td>Port</td><td><div class=\"dni-plaintext\"><pre>8081</pre></div></td></tr><tr><td>Query</td><td><div class=\"dni-plaintext\"><pre></pre></div></td></tr><tr><td>Fragment</td><td><div class=\"dni-plaintext\"><pre></pre></div></td></tr><tr><td>Scheme</td><td><div class=\"dni-plaintext\"><pre>https</pre></div></td></tr><tr><td>OriginalString</td><td><div class=\"dni-plaintext\"><pre>https://localhost:8081</pre></div></td></tr><tr><td>DnsSafeHost</td><td><div class=\"dni-plaintext\"><pre>localhost</pre></div></td></tr><tr><td>IdnHost</td><td><div class=\"dni-plaintext\"><pre>localhost</pre></div></td></tr><tr><td>IsAbsoluteUri</td><td><div class=\"dni-plaintext\"><pre>True</pre></div></td></tr><tr><td>UserEscaped</td><td><div class=\"dni-plaintext\"><pre>False</pre></div></td></tr><tr><td>UserInfo</td><td><div class=\"dni-plaintext\"><pre></pre></div></td></tr></tbody></table></div></details></td></tr></tbody></table></div></details><style>\r\n",
-       ".dni-code-hint {\r\n",
-       "    font-style: italic;\r\n",
-       "    overflow: hidden;\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview {\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview td {\r\n",
-       "    vertical-align: top;\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "details.dni-treeview {\r\n",
-       "    padding-left: 1em;\r\n",
-       "}\r\n",
-       "table td {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "table tr { \r\n",
-       "    vertical-align: top; \r\n",
-       "    margin: 0em 0px;\r\n",
-       "}\r\n",
-       "table tr td pre \r\n",
-       "{ \r\n",
-       "    vertical-align: top !important; \r\n",
-       "    margin: 0em 0px !important;\r\n",
-       "} \r\n",
-       "table th {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "</style>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "//var cstring = \"AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==\";\n",
-    "var endpoint = \"https://localhost:8081\";\n",
-    "var key =\"C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==\";\n",
+    "using Microsoft.Azure.Cosmos;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open the Azure Cosmos DB Emulator or your Azure Subscription and find the connection strings\n",
+    "Declare object named client using CosmosClient constructor.\n",
+    "Use the connection string\n",
     "\n",
-    "CosmosClientOptions options = new CosmosClientOptions\n",
-    "{\n",
-    "    HttpClientFactory = () => new HttpClient(new HttpClientHandler() { ServerCertificateCustomValidationCallback = HttpClientHandler.DangerousAcceptAnyServerCertificateValidator }),\n",
-    "    ConnectionMode = ConnectionMode.Gateway,\n",
-    "    LimitToEndpoint = true\n",
-    "};\n",
+    "CosmosClientOptions parameter is optional and it has many useful options. Take a look at CosmosClient file under Study directory to learn more about it.\n",
     "\n",
-    "var client = new CosmosClient(endpoint, key); //, options);\n",
+    "Display() function is a great VsCode Polygot function. It displays all the properties of an object in text.\n",
+    "\n",
+    "Use Display() function to explore the options of client object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "var cstring = \"AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==\";\n",
+    "var client = new CosmosClient(cstring);\n",
     "client.Display();"
    ]
   },
@@ -118,14 +95,16 @@
    "metadata": {},
    "source": [
     "Create a new database named \"Stackoverflow\"\n",
+    "\n",
     "Create a new container named \"Posts\". Use the \"/OwnerUserId\" property as partition key\n",
+    "\n",
     "Don't forget everything is case-sensitive!!\n",
     "Explore the new database and container properties by using Display() function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -134,7 +113,9 @@
    "outputs": [],
    "source": [
     "var db = await client.CreateDatabaseIfNotExistsAsync(\"StackOverflow\");\n",
-    "var container = await db.Database.CreateContainerIfNotExistsAsync(\"Posts\", \"/OwnerUserId\");"
+    "var container = await db.Database.CreateContainerIfNotExistsAsync(\"Posts\", \"/OwnerUserId\");\n",
+    "db.Display();\n",
+    "container.Display();"
    ]
   }
  ],
