--- a/AI Agent/Semantic.ipynb
+++ b/AI Agent/Semantic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fa5313da",
    "metadata": {
     "polyglot_notebook": {
@@ -13,7 +13,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.49.0</span></li><li><span>Microsoft.SemanticKernel, 1.48.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.52.0</span></li><li><span>Microsoft.SemanticKernel, 1.56.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -208,45 +208,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello there! I'm George, and I'm here to help you with your order. How can I assist you today?\n",
-      "Hi Hasan Savran! I'm excited to share your order details with you. \n",
+      "Hi there! My name is George, and I'm here to assist you with your order. Could you please provide me with your order number so I can help you better?\n",
+      "It looks like I couldn't find details for order number 1. Could you please verify the order number or provide more information so I can assist you further?\n",
+      "Hello Hasan Savran! It's great to see your choice of delightful items, even though I noticed that this order has been cancelled.\n",
       "\n",
-      "Here's what you've got coming your way:\n",
+      "You had ordered:\n",
+      "- A Chicken Harness and Leash: Perfect for taking your feathered friend on a stylish walk!\n",
+      "- A Mobile Phone Jail Cell: Handy for the ultimate phone timeout—because even phones need a break!\n",
+      "- Two Car French Fry Holders: Because who doesn't want to enjoy freedom fries on the go?\n",
       "\n",
-      "1. **Chicken Harness and Leash**: Just imagine taking your little feathered friend on walks. They'll be the talk of the town!\n",
-      "   \n",
-      "2. **Mobile Phone Jail Cell**: Perfect for those moments when your phone needs a little time out. It's like giving your phone a mini vacation.\n",
-      "   \n",
-      "3. **Car French Fry Holder** (Quantity: 2): Now you won't have to worry about those fries tipping over in your car. It's a holder even your fries will thank you for!\n",
-      "\n",
-      "Your order is currently in transit to the address at 1234 Main St in Uniontown, OH. Feel free to let me know if there's anything else you need!\n",
-      "Hello again! How's everything going with your order? Is there anything else I can assist you with today?\n",
-      "Your order has been cancelled as requested. 😅 \n",
-      "\n",
-      "But just think, now you'll miss out on the fun of taking a chicken for a walk with the Chicken Harness and Leash. And who will keep an eye on those cheeky mobile phones without the Mobile Phone Jail Cell? Plus, your car might miss those perfectly held fries! 🍟\n",
-      "\n",
-      "If there's anything else I can do for you, just let me know!\n"
-     ]
-    },
-    {
-     "ename": "Error",
-     "evalue": "Input request cancelled",
-     "output_type": "error",
-     "traceback": [
-      "Input request cancelled"
-     ]
-    },
-    {
-     "ename": "Error",
-     "evalue": "System.Exception: Input request cancelled\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 92\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 45\r\n   at Submission#17.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
-     "output_type": "error",
-     "traceback": [
-      "System.Exception: Input request cancelled\r\n",
-      "   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 92\r\n",
-      "   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 45\r\n",
-      "   at Submission#17.<<Initialize>>d__0.MoveNext()\r\n",
-      "--- End of stack trace from previous location ---\r\n",
-      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
+      "By canceling, you might be missing out on some quirky fun and convenience! Let me know if you'd like assistance reinstating the order or anything else.\n"
      ]
     }
    ],
