--- a/Vectors.ipynb
+++ b/Vectors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "98140ef5",
    "metadata": {
     "polyglot_notebook": {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "7cd16c2a",
    "metadata": {
     "polyglot_notebook": {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "b156029c",
    "metadata": {
     "polyglot_notebook": {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "044deb94",
    "metadata": {
     "polyglot_notebook": {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "f6899f27",
    "metadata": {
     "polyglot_notebook": {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "b82ecb01",
    "metadata": {
     "polyglot_notebook": {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "5b360965",
    "metadata": {
     "polyglot_notebook": {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "a283abbf",
    "metadata": {
     "polyglot_notebook": {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "52a8fa8d",
    "metadata": {
     "polyglot_notebook": {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "45e93a3f",
    "metadata": {
     "polyglot_notebook": {
@@ -332,21 +332,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found item:\t0.820574634194814\tHow big can a MySQL database get before performance starts to degrade\n",
-      "Found item:\t0.8157250800781729\tADO.NET Connection Pooling & SQLServer\n",
-      "Found item:\t0.804701979123578\tOracle XE or SQL Server Express\n",
-      "Found item:\t0.8033488211066728\tSQL/Query tools?\n",
-      "Found item:\t0.8030575499760829\tSQL Server 2008 compatibility with SQL Server 2005\n",
-      "Found item:\t0.8009211356908553\tAutomatically measure all SQL queries\n",
-      "Found item:\t0.8000140044671976\tSQL2005: Linking a table to multiple tables and retaining Ref Integrity?\n",
-      "Found item:\t0.7994431855900072\tIssues using MS Access as a front-end to a MySQL database back-end?\n",
-      "Found item:\t0.7990976464676238\tDifferences between MySQL and SQL Server\n",
-      "Found item:\t0.7975524123164188\tHow do I create a mapping table in SQL Server Management Studio?\n"
+      "Found item:\t0.8327983556685077\tHow big can a MySQL database get before performance starts to degrade\n",
+      "Found item:\t0.8219543146553153\tADO.NET Connection Pooling & SQLServer\n",
+      "Found item:\t0.8066679591947932\tAutomatically measure all SQL queries\n",
+      "Found item:\t0.8001215190803783\tWhat are the advantages of explicit Join Transitive Closure in SQL?\n",
+      "Found item:\t0.7970360850574535\tLINQ-to-SQL vs stored procedures?\n",
+      "Found item:\t0.795553665079754\tOracle XE or SQL Server Express\n",
+      "Found item:\t0.7954378360793087\tWhat is a \"reasonable\" length of time to keep a SQL cursor open?\n",
+      "Found item:\t0.7951176192498364\tAutomate Syncing Oracle Tables With MySQL Tables\n",
+      "Found item:\t0.7944915271196671\tMigrating from MySQL to PostgreSQL\n",
+      "Found item:\t0.7942487708612258\tHave you ever encountered a query that SQL Server could not execute because it referenced too many tables?\n"
      ]
     }
    ],
    "source": [
-    "  float[] embedding = GenerateVector(\"What are the most common questions about relational databases\").ToArray();\n",
+    "  float[] embedding = GenerateVector(\"What are the most common efficiency questions about relational databases\").ToArray();\n",
     "  var queryDef = new QueryDefinition(\n",
     "      query: $\"SELECT TOP 10 c.Title, VectorDistance(c.bodyvector,@embedding) AS score FROM c ORDER BY VectorDistance(c.bodyvector,@embedding)\"\n",
     "      ).WithParameter(\"@embedding\", embedding);\n",
