--- a/AI Agent/Semantic.ipynb
+++ b/AI Agent/Semantic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "fa5313da",
    "metadata": {
     "polyglot_notebook": {
@@ -13,7 +13,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.52.0</span></li><li><span>Microsoft.SemanticKernel, 1.56.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.52.0</span></li><li><span>Microsoft.SemanticKernel, 1.58.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -208,16 +208,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi there! My name is George, and I'm here to assist you with your order. Could you please provide me with your order number so I can help you better?\n",
-      "It looks like I couldn't find details for order number 1. Could you please verify the order number or provide more information so I can assist you further?\n",
-      "Hello Hasan Savran! It's great to see your choice of delightful items, even though I noticed that this order has been cancelled.\n",
+      "Hello! I'm George, here to assist you with your order. How can I help you today?\n",
+      "Hey Hasan! It looks like your order had some fun items:\n",
       "\n",
-      "You had ordered:\n",
-      "- A Chicken Harness and Leash: Perfect for taking your feathered friend on a stylish walk!\n",
-      "- A Mobile Phone Jail Cell: Handy for the ultimate phone timeout—because even phones need a break!\n",
-      "- Two Car French Fry Holders: Because who doesn't want to enjoy freedom fries on the go?\n",
+      "1. **Chicken Harness and Leash** - Now your feathered friend can strut in style!\n",
+      "2. **Mobile Phone Jail Cell** - A perfect way to keep your phone away when you need a break.\n",
+      "3. **Car French Fry Holder** - Ideal for crispy on-the-go snacking without the mess.\n",
       "\n",
-      "By canceling, you might be missing out on some quirky fun and convenience! Let me know if you'd like assistance reinstating the order or anything else.\n"
+      "Since the order's status is \"Cancelled,\" it seems that these quirky and useful items won't be making their way to you. If you change your mind or need assistance, feel free to let me know! 😊\n"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "Input request cancelled",
+     "output_type": "error",
+     "traceback": [
+      "Input request cancelled"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "System.Exception: Input request cancelled\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 92\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 45\r\n   at Submission#4.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "output_type": "error",
+     "traceback": [
+      "System.Exception: Input request cancelled\r\n",
+      "   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 92\r\n",
+      "   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 45\r\n",
+      "   at Submission#4.<<Initialize>>d__0.MoveNext()\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
      ]
     }
    ],
