--- a/Live/Vectors.ipynb
+++ b/Live/Vectors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "98140ef5",
    "metadata": {
     "polyglot_notebook": {
@@ -13,7 +13,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Azure, 1.0.6</span></li><li><span>Azure.AI.OpenAI, 2.1.0</span></li><li><span>Azure.Identity, 1.14.0</span></li><li><span>Microsoft.Azure.Cosmos, 3.52.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Azure, 1.0.6</span></li><li><span>Azure.AI.OpenAI, 2.1.0</span></li><li><span>Azure.Identity, 1.16.0</span></li><li><span>Microsoft.Azure.Cosmos, 3.53.1</span></li><li><span>Newtonsoft.Json, 13.0.4</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "7cd16c2a",
    "metadata": {
     "polyglot_notebook": {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "b156029c",
    "metadata": {
     "polyglot_notebook": {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "044deb94",
    "metadata": {
     "polyglot_notebook": {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "f6899f27",
    "metadata": {
     "polyglot_notebook": {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "b82ecb01",
    "metadata": {
     "polyglot_notebook": {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "5b360965",
    "metadata": {
     "polyglot_notebook": {
@@ -260,11 +260,12 @@
     "\n",
     "client = new CosmosClient(cstring, new CosmosClientOptions() {AllowBulkExecution = true});\n",
     "Container postContainer = client.GetContainer(\"StackOverflow\", \"VectorPosts2\");\n",
-    "foreach (var post in postList.Where(t=>t.PostType ==\"Question\"&& t.Title.Contains(\"SQL\")).Take(1000))\n",
+    "\n",
+    "/*foreach (var post in postList.Where(t=>t.PostType ==\"Question\"&& t.Title.Contains(\"SQL\")).Take(1000))\n",
     "{\n",
     "    post.bodyvector = GenerateVector(post.PostBody).ToArray();\n",
     "    await postContainer.UpsertItemAsync(post, new PartitionKey(post.OwnerUserId));    \n",
-    "}"
+    "}*/"
    ]
   },
   {
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "a283abbf",
    "metadata": {
     "polyglot_notebook": {
@@ -288,7 +289,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.52.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.53.1</span></li><li><span>Newtonsoft.Json, 13.0.4</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "52a8fa8d",
    "metadata": {
     "polyglot_notebook": {
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "45e93a3f",
    "metadata": {
     "polyglot_notebook": {
@@ -333,7 +334,7 @@
      "output_type": "stream",
      "text": [
       "Found item:\t0.8327983556685077\tHow big can a MySQL database get before performance starts to degrade\n",
-      "Found item:\t0.8219543146553153\tADO.NET Connection Pooling & SQLServer\n",
+      "Found item:\t0.8220445845731529\tADO.NET Connection Pooling & SQLServer\n",
       "Found item:\t0.8066679591947932\tAutomatically measure all SQL queries\n",
       "Found item:\t0.8001215190803783\tWhat are the advantages of explicit Join Transitive Closure in SQL?\n",
       "Found item:\t0.7970360850574535\tLINQ-to-SQL vs stored procedures?\n",
