--- a/AI Agent/1 Summarize.ipynb
+++ b/AI Agent/1 Summarize.ipynb
@@ -32,6 +32,9 @@
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -49,6 +52,9 @@
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [
