--- a/Live/Vectors.ipynb
+++ b/Live/Vectors.ipynb
@@ -320,6 +320,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "641f62e2",
+   "metadata": {},
+   "source": [
+    "TOP statement is your friend\n",
+    "Be sure you have vector indexes\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "45e93a3f",
