--- a/Labs/Lab2 - CRUD.ipynb
+++ b/Labs/Lab2 - CRUD.ipynb
@@ -132,6 +132,16 @@
     "// insert The Post object into the container\n",
     "//var newitem = "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b16500f",
+   "metadata": {},
+   "source": [
+    "Query the new post you inserted\n",
+    "Update It\n",
+    "Read it to see changes\n"
+   ]
   }
  ],
  "metadata": {
