--- a/Study/11 AI Summarize.ipynb
+++ b/Study/11 AI Summarize.ipynb
@@ -34,7 +34,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "9a14c6cf",
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Celebrity chef Hilda Baci set a Guinness World Record for the largest serving of jollof rice at 8,780 kilograms. This event took place on a Friday and included a dramatic moment when the pot collapsed during weighing. The previous requirement was 4,700 kilograms. The rice was shared with onlookers in Victoria Island. Baci, who once held the longest cooking marathon record in 2023 with 93 hours and 11 minutes, inspired many young West Africans to pursue their own Guinness World Record attempts in various categories.\r\n"
+      "Celebrity chef Hilda Baci set a new Guinness World Record for the largest serving of jollof rice, preparing 8,780 kilograms, more than the required 4,700 kilograms. The achievement involved nine hours of cooking, with a dramatic moment when the pot collapsed during weighing. The rice was distributed to onlookers on Victoria Island. Previously, Baci held the record for the longest cooking marathon in 2023, lasting 93 hours and 11 minutes, until surpassed by Irish chef Alan Fisher. Baci's feats have inspired many young West Africans to attempt Guinness World Records, spanning various activities like book reading, skipping rope, and speech giving.\r\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
     "var texttosummary = \"Guinness World Records confirmed the achievement on Monday for the largest jollof rice serving by celebrity chef Hilda Baci.Baci, who briefly held the world record for the longest cooking marathon in 2023, last Friday prepared a pot of 8,780 kilograms of jollof rice, a popular West African delicacy made from rice cooked in a pepper sauce. The food is a staple across the region. “It took nine hours of fire, passion, and teamwork,” the chef said after the day-long cooking and serving, which involved a moment of high drama when the huge retrofitted pot collapsed under a crane during weighing. Guinness World Records said on its official X account that Baci had surpassed the required 4,700 kilograms of rice. The mountain of rice was distributed to hundreds of onlookers who had come to cheer the chef at upscale Victoria Island. Baci’s marathon cooking challenge in 2023, which spanned 93 hours and 11 minutes, was surpassed in the record books a year later by Irish chef Alan Fisher. But it sparked off numerous of attempts at Guinness World Records recognition as many young West Africans tapped into the desire for global acclaim, including challenges for the longest book reading, the longest skipping rope session and the longest speech, among others.\";\n",
     "chathistory.AddUserMessage(texttosummary);\n",
     "var result = await chatcompservice.GetChatMessageContentAsync(chathistory, executionsettings, kernel);\n",
-    "Console.WriteLine(result);"
+    "Console.WriteLine(result);\n"
    ]
   }
  ],
