--- a/Study/12 AI Agent.ipynb
+++ b/Study/12 AI Agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "fa5313da",
    "metadata": {
     "polyglot_notebook": {
@@ -13,7 +13,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.52.0</span></li><li><span>Microsoft.SemanticKernel, 1.58.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.53.1</span></li><li><span>Microsoft.SemanticKernel, 1.65.0</span></li><li><span>Newtonsoft.Json, 13.0.4</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -28,7 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "id": "9cdf0999",
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -44,7 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
+   "id": "e4e83837",
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -62,6 +64,9 @@
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -201,6 +206,9 @@
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [
@@ -208,14 +216,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! I'm George, here to assist you with your order. How can I help you today?\n",
-      "Hey Hasan! It looks like your order had some fun items:\n",
+      "Hi there! I'm George, and I'm here to help. Let's start by checking the status of your order. Could you please provide me with your order number?\n",
+      "It seems like there's an issue fetching your order details with the given order number. Could you please double-check the order number and provide it again? I'm here to make sure we resolve this for you!\n",
+      "It seems there's still an issue retrieving your order details with the order number provided. Could you confirm if this is the correct order number, or if there might be another reference number you can provide? I'm here to assist you with anything you need!\n",
+      "It appears there is still an issue with retrieving your order details. It could be due to an incorrect order number or a system glitch. If you have any other reference number or additional details regarding the order, please let me know, and I'll do my utmost to resolve this for you!\n",
+      "Hi Hasan! Thanks for reaching out. I took a look at your order, and it seems that it has been cancelled. \n",
       "\n",
-      "1. **Chicken Harness and Leash** - Now your feathered friend can strut in style!\n",
-      "2. **Mobile Phone Jail Cell** - A perfect way to keep your phone away when you need a break.\n",
-      "3. **Car French Fry Holder** - Ideal for crispy on-the-go snacking without the mess.\n",
+      "You had some very interesting items in your cart, including:\n",
       "\n",
-      "Since the order's status is \"Cancelled,\" it seems that these quirky and useful items won't be making their way to you. If you change your mind or need assistance, feel free to let me know! 😊\n"
+      "- A Chicken Harness and Leash: Perfect for a feathery friend who enjoys a bit of outdoor adventure!\n",
+      "- A Mobile Phone Jail Cell: A humorous way to keep those phones at bay, especially when you need a little tech detox.\n",
+      "- Car French Fry Holders (x2): Ideal for ensuring your fries are always within reach during those road trips!\n",
+      "\n",
+      "I can't help but imagine those French Fry Holders holding up traffic with delicious distractions or saving your car seats from becoming a salty mess. 😄 If these sound like a must-have, you might want to consider placing another order!\n",
+      "\n",
+      "Feel free to let me know how else I can assist you today!\n",
+      "It looks like your order is already marked as cancelled, so you won't have to worry about receiving these quirky items anymore. Just imagine the French Fry Holder feeling abandoned in the backseat, yearning for some crispy company! 😄\n",
+      "\n",
+      "If there's anything else you need or any other way I can help, feel free to let me know. I'm here for you!\n"
      ]
     },
     {
@@ -228,7 +246,7 @@
     },
     {
      "ename": "Error",
-     "evalue": "System.Exception: Input request cancelled\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 92\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 45\r\n   at Submission#4.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "evalue": "System.Exception: Input request cancelled\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 93\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 46\r\n   at Submission#4.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
      "output_type": "error",
      "traceback": [
       "System.Exception: Input request cancelled\r\n",
@@ -267,6 +285,9 @@
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
